--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,14 @@
 
     <groupId>com.erikschouten</groupId>
     <artifactId>CustomClasses</artifactId>
-    <version>0.1.4</version>
+    <version>0.1.5</version>
 
     <properties>
         <kotlin.version>1.2.51</kotlin.version>
         <javax.validation>2.0.1.Final</javax.validation>
+        <mockito>1.6.0</mockito>
+        <junit>4.12</junit>
+        <hibernate.validator>6.0.10.Final</hibernate.validator>
     </properties>
 
     <dependencies>
@@ -33,6 +36,33 @@
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
             <version>1.11.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.nhaarman</groupId>
+            <artifactId>mockito-kotlin</artifactId>
+            <version>${mockito}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>${hibernate.validator}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.el</groupId>
+            <artifactId>javax.el-api</artifactId>
+            <version>3.0.1-b06</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.el</artifactId>
+            <version>3.0.1-b10</version>
         </dependency>
     </dependencies>
 
