--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,20 @@
 
     <groupId>com.erikschouten</groupId>
     <artifactId>CustomClasses</artifactId>
-    <version>0.1.8</version>
+    <version>0.1.9</version>
 
+    <!--mvn versions:update-properties-->
+    <!--mvn versions:commit-->
     <properties>
-        <kotlin.version>1.2.51</kotlin.version>
-        <javax.validation>2.0.1.Final</javax.validation>
-        <mockito>1.6.0</mockito>
-        <junit>4.12</junit>
-        <hibernate.validator>6.0.10.Final</hibernate.validator>
+        <kotlin.version>1.3.20</kotlin.version>
+
+        <validation-api.version>2.0.1.Final</validation-api.version>
+        <jsoup.version>1.11.3</jsoup.version>
+        <junit.version>4.13-beta-2</junit.version>
+        <mockito-kotlin.version>2.1.0</mockito-kotlin.version>
+        <hibernate-validator.version>6.1.0.Alpha2</hibernate-validator.version>
+        <javax.el-api.version>3.0.1-b06</javax.el-api.version>
+        <javax.el.version>3.0.1-b11</javax.el.version>
     </properties>
 
     <dependencies>
@@ -30,39 +36,39 @@
         <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
-            <version>${javax.validation}</version>
+            <version>${validation-api.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
-            <version>1.11.3</version>
+            <version>${jsoup.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.nhaarman</groupId>
+            <groupId>com.nhaarman.mockitokotlin2</groupId>
             <artifactId>mockito-kotlin</artifactId>
-            <version>${mockito}</version>
+            <version>${mockito-kotlin.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>${junit}</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>${hibernate.validator}</version>
+            <version>${hibernate-validator.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.el</groupId>
             <artifactId>javax.el-api</artifactId>
-            <version>3.0.1-b06</version>
+            <version>${javax.el-api.version}</version>
         </dependency>
         <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>javax.el</artifactId>
-            <version>3.0.1-b10</version>
+            <version>${javax.el.version}</version>
         </dependency>
     </dependencies>
 
@@ -75,7 +81,6 @@
                 <artifactId>kotlin-maven-plugin</artifactId>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <version>${kotlin.version}</version>
-
                 <executions>
                     <execution>
                         <id>compile</id>
@@ -83,7 +88,6 @@
                             <goal>compile</goal>
                         </goals>
                     </execution>
-
                     <execution>
                         <id>test-compile</id>
                         <goals>
@@ -94,5 +98,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
