--- a/pom.xml
+++ b/pom.xml
@@ -6,18 +6,18 @@
 
     <groupId>com.erikschouten</groupId>
     <artifactId>CustomClasses</artifactId>
-    <version>0.1.9</version>
+    <version>0.1.10-SNAPSHOT</version>
 
     <!--mvn versions:update-properties-->
     <!--mvn versions:commit-->
     <properties>
-        <kotlin.version>1.3.20</kotlin.version>
+        <kotlin.version>1.3.41</kotlin.version>
 
         <validation-api.version>2.0.1.Final</validation-api.version>
-        <jsoup.version>1.11.3</jsoup.version>
-        <junit.version>4.13-beta-2</junit.version>
+        <jsoup.version>1.12.1</jsoup.version>
+        <junit.version>4.13-beta-3</junit.version>
         <mockito-kotlin.version>2.1.0</mockito-kotlin.version>
-        <hibernate-validator.version>6.1.0.Alpha2</hibernate-validator.version>
+        <hibernate-validator.version>6.1.0.Alpha6</hibernate-validator.version>
         <javax.el-api.version>3.0.1-b06</javax.el-api.version>
         <javax.el.version>3.0.1-b11</javax.el.version>
     </properties>
