--- a/pom.xml
+++ b/pom.xml
@@ -6,20 +6,20 @@
 
     <groupId>com.erikschouten</groupId>
     <artifactId>CustomClasses</artifactId>
-    <version>0.1.12</version>
+    <version>0.1.13</version>
 
     <!--mvn versions:update-properties-->
     <!--mvn versions:commit-->
     <properties>
-        <kotlin.version>1.3.72</kotlin.version>
+        <kotlin.version>1.4.10</kotlin.version>
 
         <validation-api.version>2.0.1.Final</validation-api.version>
         <jsoup.version>1.13.1</jsoup.version>
         <junit.version>4.13</junit.version>
         <mockito-kotlin.version>2.2.0</mockito-kotlin.version>
-        <hibernate-validator.version>6.1.2.Final</hibernate-validator.version>
-        <javax.el-api.version>3.0.0</javax.el-api.version>
-        <javax.el.version>3.0.0</javax.el.version>
+        <hibernate-validator.version>7.0.0.Alpha6</hibernate-validator.version>
+        <javax.el-api.version>3.0.1-b06</javax.el-api.version>
+        <javax.el.version>3.0.1-b11</javax.el.version>
     </properties>
 
     <dependencies>
